--- a/API/config.env
+++ b/API/config.env
@@ -1,3 +1,3 @@
-DATABASE= mongodb+srv://Mustafa:9425481384@cluster0.0huzp3w.mongodb.net/mernstack?retryWrites=true&w=majority
+DATABASE= mongodb+srv://Hakimji:asdfghjkl@project1.l0xnm.mongodb.net/students
 PORT= 4000
 SECRET_KEY = MYNAMEISMUSTAFAHAKIMJIWIFETASNEEMHAKIMJI
