--- a/API/config.env
+++ b/API/config.env
@@ -1,3 +1,3 @@
-DATABASE= mongodb+srv://Hakimji:asdfghjkl@project1.l0xnm.mongodb.net/students
+DATABASE= mongodb+srv://mustafa:12345@cluster0.6lzdb.mongodb.net/students
 PORT= 4000
 SECRET_KEY = MYNAMEISMUSTAFAHAKIMJIWIFETASNEEMHAKIMJI
